Fix contact form spacing; add cursor setting

--- a/css/contact.css
+++ b/css/contact.css
@@ -58,10 +58,12 @@ input,
 textarea {
     font: 0.9375rem "Jost", sans-serif;
     border: none;
+    line-height: 26px;
     border-bottom: 1px solid var(--white);
-    padding: 0 16px;
+    padding: 0 16px 14px;
     margin: 0;
     background: none;
+    cursor: pointer;
 }
 
 input::placeholder,
@@ -96,6 +98,7 @@ textarea:valid {
 button.btn {
     margin-top: 14px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 /************************************************** 
